Fix alignement les plus polulaire + icone et travail sur section populary

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -61,13 +61,14 @@ a {
     border-bottom: 2px transparent solid;
 }
 
-.navbarHeader a:hover {
+.navbarHeader a:hover{
     transition: color 0.3s;
     transition: border-top 0.5s;
     border-top: 2px solid var(--darkBlue);
     color: var(--darkBlue)
 }
-.navbarHeader a[data-active="true"] {
+
+.navbarHeader a[data-active='true']{
     border-top: 2px solid var(--darkBlue);
     color: var(--darkBlue);
 
@@ -342,21 +343,25 @@ main {
     padding: 0 2rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     max-width: 470px;
     margin-left: 20px;
 }
 
 .popularTitle {
     font-size: 1.2rem;
-    padding: 2em .5em 1em .5em;
+    padding: 2em 0 1em 0;
     font-weight: bold;
-    display: inline-flex;
+    float: left;
 }
 
 .polularTitleDiv {
-  display: inline-flex;
-  justify-content: space-between;
+  width: 100%;
+}
+
+.popularContainIcon {
+    padding: 2.5em 0 1em 0;
+    float: right;
 }
 
 .popular-line-chart {
@@ -366,17 +371,18 @@ main {
 .popularContainer {
    display: flex;
    flex-direction: column;
+   align-items: center;
    row-gap: 1.8rem;
-   padding-bottom: 2em;
    border: 1px solid red;
-   
+  
 }
 
 .popularCard {
     border-radius: 1rem;
     border: 1px solid black;
     padding: .5rem;
-    max-width: 350px;
+    max-width: 400px;
+    min-width: 400px;
     background-color: #FFF;
     box-shadow: 5px 5px 5px rgb(185, 183, 183);    
 }
